--- a/homepage.html
+++ b/homepage.html
@@ -74,7 +74,7 @@
 		<li><p><a href="html_Wildlife Photography.asp" target="_blank">Wildlife Photography</a></p></li>
 		<li><p><a href="html_Landscape Photgraphy.asp" target="_blank">Landscape Photography</a></p></li>
 		<li><p><a href="html_Artwork.asp" target="_blank">Artwork</a></p></li>
-		<li><p><a href="html_Contact.asp" target="_blank">Contact</a></p></li>
+		<li><p><a href="contact.html" target="_blank">Contact</a></p></li>
 	</ul>
 
 
