Newest version of homepage

--- a/homepage.html
+++ b/homepage.html
@@ -68,13 +68,14 @@
 	
 
 	<ul>
-		<li><p><a href="html_Home.asp" target="_blank">Home</a></p></li>
+		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/homepage.html" target="_blank">Home</a></p></li>
 		<li><p><a href="html_About.asp" target="_blank">About</a></p></li>
-		<li><p><a href="html_Animal Photography.asp" target="_blank">Animal Photograph</a></p></li>
-		<li><p><a href="html_Wildlife Photography.asp" target="_blank">Wildlife Photography</a></p></li>
-		<li><p><a href="html_Landscape Photgraphy.asp" target="_blank">Landscape Photography</a></p></li>
-		<li><p><a href="html_Artwork.asp" target="_blank">Artwork</a></p></li>
-		<li><p><a href="contact.html" target="_blank">Contact</a></p></li>
+		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/animals/animal%20photography.html" target="_blank">Animal Photography</a></p></li>
+		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/wildlife/wildlife%20photography.html" target="_blank">Wildlife Photography</a></p></li>
+		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/landscapes/landscape%20photography.html" target="_blank">Landscape Photography</a></p></li>
+		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/paintings/artwork.html" target="_blank">Artwork</a></p></li>
+		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/contact.html" target="_blank">Contact</a></p></li>
+
 	</ul>
 
 
