--- a/animal photography.html
+++ b/animal photography.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <html>
+<title> Animal Photography </title>
 <head>
 <style>
 div.img {
@@ -160,18 +161,6 @@ body {
 <div class="responsive">
 	<div class="img">
 		<a target="_blank"
-	href="freya2.jpg">
-		<img src="freya2.jpg"
-	alt="freya2"
-	width="300" height="200">
-		</a>
-		<div class="desc">Freya</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
 	href="freya3.jpg">
 		<img src="freya3.jpg"
 	alt="freya3"
@@ -268,30 +257,6 @@ body {
 <div class="responsive">
 	<div class="img">
 		<a target="_blank"
-	href="murphypoppy.jpg">
-		<img src="murphypoppy.jpg"
-	alt="murphypoppy"
-	width="300" height="200">
-		</a>
-		<div class="desc">Murphy </div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="puppies.jpg">
-		<img src="puppies.jpg"
-	alt="puppies"
-	width="300" height="200">
-		</a>
-		<div class="desc">Mojo Dill and Murphy </div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
 	href="sammy.jpg">
 		<img src="sammy.jpg"
 	alt="sammy"
@@ -324,7 +289,7 @@ body {
 
 
 <script
-  src="https://code.jquery.com/jquery-3.1.1.js"
+  src=jquery.js"
   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
   crossorigin="anonymous"></script>
 <!--   if adding any jquery stuff add it in under this command or it won't work -->
