--- a/artwork.html
+++ b/artwork.html
@@ -3,6 +3,7 @@
 
 <html>
 <head>
+<title> Artwork </title>
 <style>
 div.img {
 	border:1px solid #ccc;
@@ -54,13 +55,13 @@ div.desc {
 
 
 
-h2 {
+h1 {
 	font-size:30px;
 	text-align: center;
 	color:#737373;
 
 }
- h4 {
+p {
  	text-align: center;
  	color:#737373;
 }
@@ -72,18 +73,10 @@ body {
 </style>
 </head>
 
+<body>
 
-
-
-
-
-
-
-
-
-
-<h1> Commissioned Paintings</h1>
-<p> These are some commissioned paintings, to enquire about having a painting done please see the contact page </p>
+<h1> Commissioned Artworks </h1>
+<p> A variety of previous commissioned works </p>
 
 
 
@@ -148,6 +141,202 @@ body {
 	</div>
 </div>
 
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="coast.jpg">
+		<img src="coast.jpg"
+	alt="coast"
+	width="300" height="200">
+		</a>
+		<div class="desc">Unglazed Cermaic Jug</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="coast1.jpg">
+		<img src="coast1.jpg"
+	alt="coast1"
+	width="300" height="200">
+		</a>
+		<div class="desc">Unglazed Cermaic Jug</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="coast2.jpg">
+		<img src="coast2.jpg"
+	alt="coast2"
+	width="300" height="200">
+		</a>
+		<div class="desc">Unglazed Cermaic Jug</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="finishedceramic1.jpg">
+		<img src="finishedceramic1.jpg"
+	alt="finishedceramic1"
+	width="300" height="200">
+		</a>
+		<div class="desc">Finished Product!</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="finishedceramic3.jpg">
+		<img src="finishedceramic3.jpg"
+	alt="finishedceramic3"
+	width="300" height="200">
+		</a>
+		<div class="desc">Finished Product</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="finishedcoast.jpg">
+		<img src="finishedcoast.jpg"
+	alt="finishedcoast"
+	width="300" height="200">
+		</a>
+		<div class="desc">Finished Product</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="finishedcoast1.jpg">
+		<img src="finishedcoast1.jpg"
+	alt="finishedcoast1"
+	width="300" height="200">
+		</a>
+		<div class="desc"> Final Product</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="housename.jpg">
+		<img src="housename.jpg"
+	alt="housename"
+	width="300" height="200">
+		</a>
+		<div class="desc"> Unglazed Home name </div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="housenamedone.jpg">
+		<img src="housenamedone.jpg"
+	alt="housenamedone"
+	width="300" height="200">
+		</a>
+		<div class="desc"> Finished House Name </div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="ladies2.jpg">
+		<img src="ladies2.jpg"
+	alt="ladies2"
+	width="300" height="200">
+		</a>
+		<div class="desc">Ladies before glazing </div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="ladies3.jpg">
+		<img src="ladies3.jpg"
+	alt="ladies3"
+	width="300" height="200">
+		</a>
+		<div class="desc">Unglazed Cermaic mug</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="ladiesfinished1.jpg">
+		<img src="ladiesfinished1.jpg"
+	alt="ladiesfinished1"
+	width="300" height="200">
+		</a>
+		<div class="desc">Glazed Ladies</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="ladiesfinished.jpg">
+		<img src="ladiesfinished.jpg"
+	alt="ladiesfinished"
+	width="300" height="200">
+		</a>
+		<div class="desc">Glazed Ladies</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="summerhouse.jpg">
+		<img src="summerhouse.jpg"
+	alt="summerhouse"
+	width="300" height="200">
+		</a>
+		<div class="desc">Summerhouse Commission Sketchings </div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="summerhouse1.jpg">
+		<img src="summerhouse1.jpg"
+	alt="summerhouse1"
+	width="300" height="200">
+		</a>
+		<div class="desc">Summerhouse Commission Sketchings</div>
+	</div>
+</div>
+
+<div class="responsive">
+	<div class="img">
+		<a target="_blank"
+	href="summerhouse3.jpg">
+		<img src="summerhouse3.jpg"
+	alt="summerhouse3"
+	width="300" height="200">
+		</a>
+		<div class="desc">Summerhouse Commission Sketchings</div>
+	</div>
+</div>
+
+
+
+
+
 
 <script
   src="https://code.jquery.com/jquery-3.1.1.js"
@@ -165,3 +354,6 @@ body {
   ga('send', 'pageview');
 
 </script>
+
+</body>
+</html>
