--- a/landscape photography.html
+++ b/landscape photography.html
@@ -1,7 +1,7 @@
 <!DOCTYPEhtml>
 <html>
 <head>
-
+<title> Landscape Photography </title>
 <style>
 
 div.img {
@@ -68,64 +68,6 @@ h2 {
  }
  
 </style>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -231,18 +173,6 @@ h2 {
 	width="300" height="200">
 		</a>
 		<div class="desc"> Mirrored Lake</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="lake1.jpg">
-		<img src="lake1.jpg"
-	alt="lake1"
-	width="300" height="200">
-		</a>
-		<div class="desc"> Blickling Lake</div>
 	</div>
 </div>
 
