--- a/wildlife photography.html
+++ b/wildlife photography.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title> Wildlife Photography </title>
 <!DOCTYPE html>
 
 <html>
@@ -117,48 +118,12 @@ h2 {
 <div class="responsive">
 	<div class="img">
 		<a target="_blank"
-	href="bird1.jpg">
-		<img src="bird1.jpg"
-	alt="bird1"
-	width="300" height="200">
-		</a>
-		<div class="desc">A stunning red kite flying over the marshes(check)</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="birdy.jpg">
-		<img src="birdy.jpg"
-	alt="birdy"
-	width="300" height="200">
-		</a>
-		<div class="desc">tucking into lunch</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
 	href="bluebells.jpg">
 		<img src="bluebells.jpg"
 	alt="bluebells"
 	width="300" height="200">
 		</a>
 		<div class="desc">Beautiful Norfolk Bluebells</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="carving.jpg">
-		<img src="carving.jpg"
-	alt="carving"
-	width="300" height="200">
-		</a>
-		<div class="desc">Leaving a Mark</div>
 	</div>
 </div>
 
@@ -198,17 +163,6 @@ h2 {
 	</div>
 </div>
 
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="fox.jpg">
-		<img src="fox.jpg"
-	alt="fox"
-	width="300" height="200">
-		</a>
-		<div class="desc">King of the Haybales</div>
-	</div>
-</div>
 
 <div class="responsive">
 	<div class="img">
@@ -309,42 +263,6 @@ h2 {
 <div class="responsive">
 	<div class="img">
 		<a target="_blank"
-	href="mushrooms.jpg">
-		<img src="mushrooms.jpg"
-	alt="mushrooms"
-	width="300" height="200">
-		</a>
-		<div class="desc">An insects forest</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="nettle.jpg">
-		<img src="nettle.jpg"
-	alt="nettle"
-	width="300" height="200">
-		</a>
-		<div class="desc">Nettles</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="plant.jpg">
-		<img src="plant.jpg"
-	alt="plant"
-	width="300" height="200">
-		</a>
-		<div class="desc"> Pretty Plants</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
 	href="spider.jpg">
 		<img src="spider.jpg"
 	alt="spider"
@@ -387,18 +305,6 @@ h2 {
 	width="300" height="200">
 		</a>
 		<div class="desc">Thistles</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="treebird.jpg">
-		<img src="treebird.jpg"
-	alt="treebird"
-	width="300" height="200">
-		</a>
-		<div class="desc"> Spot the bird</div>
 	</div>
 </div>
 
@@ -453,18 +359,6 @@ h2 {
 <div class="responsive">
 	<div class="img">
 		<a target="_blank"
-	href="caterpillar2.jpg">
-		<img src="caterpillar2.jpg"
-	alt="caterpillar2"
-	width="300" height="200">
-		</a>
-		<div class="desc">Caterpillar</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
 	href="damselfly.jpg">
 		<img src="damselfly.jpg"
 	alt="damselfly"
@@ -507,30 +401,6 @@ h2 {
 	width="300" height="200">
 		</a>
 		<div class="desc"> DragonFly </div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="dragonfly.jpg">
-		<img src="dragonfly.jpg"
-	alt="dragonfly"
-	width="300" height="200">
-		</a>
-		<div class="desc">Dragonfly</div>
-	</div>
-</div>
-
-<div class="responsive">
-	<div class="img">
-		<a target="_blank"
-	href="eagle.jpg">
-		<img src="eagle.jpg"
-	alt="eagle"
-	width="300" height="200">
-		</a>
-		<div class="desc"> Eagle</div>
 	</div>
 </div>
 
