--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 	<ul>
 		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/homepage.html" target="_blank">Home</a></p></li>
-		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/About.html" target="_blank">About</a></p></li>
+		<li><p><a href="/hanapinsent.github.io/cassiepinsentart/About.html" target="_blank">About</a></p></li>
 		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/animals/animal%20photography.html" target="_blank">Animal Photography</a></p></li>
 		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/wildlife/wildlife%20photography.html" target="_blank">Wildlife Photography</a></p></li>
 		<li><p><a href="file:///D:/Users/Student/Documents/GitHub/first_site/hanapinsent.github.io/landscapes/landscape%20photography.html" target="_blank">Landscape Photography</a></p></li>
