--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 17</div>
-  <img src="alfie.jpg" style="width:100%">
+  <img src="Animals/alfie.jpg" style="width:100%">
   <div class="text">Ginger Cat</div>
 </div>
 
