--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 17</div>
-  <img src="dill.jpg" style="width:100%">
+  <img src="animals/dill.jpg" style="width:100%">
   <div class="text">Dog Portrait</div>
 </div>
 
